--- a/deploy/helloworld.yml
+++ b/deploy/helloworld.yml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: demo-concourse-flux
+#   namespace: demo-concourse-flux
   name: helloworld
   labels:
     app: helloworld
@@ -17,7 +17,7 @@ spec:
       app: helloworld
   template:
     metadata:
-      namespace: demo-concourse-flux
+#       namespace: demo-concourse-flux
       labels:
         app: helloworld
     spec:
@@ -26,33 +26,51 @@ spec:
         image: argoproj/rollouts-demo: blue
         imagePullPolicy: Always
         ports:
-        - name: web
+        - name: http
           containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: demo-concourse-flux
+#   namespace: demo-concourse-flux
   name: helloworld-svc
 spec:
   ports:
   - port: 8080
   selector:
     app: helloworld
-  type: ClusterIP
+  type: LoadBalancer
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  namespace: demo-concourse-flux
   name: helloworld
   annotations:
-    kubernetes.io/ingress.class: traefik
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
-  - host: demo-concourse-flux.particule.io
-    http:
+  - http:
       paths:
-      - backend:
-          serviceName: helloworld-svc
-          servicePort: 8080
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: helloworld-svc
+            port:
+              number: 80
+
+# apiVersion: networking.k8s.io/v1beta1
+# kind: Ingress
+# metadata:
+#   namespace: demo-concourse-flux
+#   name: helloworld
+#   annotations:
+#     kubernetes.io/ingress.class: traefik
+# spec:
+#   rules:
+#   - host: demo-concourse-flux.particule.io
+#     http:
+#       paths:
+#       - backend:
+#           serviceName: helloworld-svc
+#           servicePort: 8080
