--- a/deploy/helloworld.yml
+++ b/deploy/helloworld.yml
@@ -2,75 +2,52 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-#   namespace: demo-concourse-flux
-  name: helloworld
+  name: colorapi
   labels:
-    app: helloworld
-#   annotations:
-#     flux.weave.works/automated: "true"
-#     flux.weave.works/tag.helloworld: semver:~1.0
+    app: colorapi
 spec:
-  replicas: 1
+  replicas: 5
   revisionHistoryLimit: 2
   selector:
     matchLabels:
-      app: helloworld
+      app: colorapi
   template:
     metadata:
-#       namespace: demo-concourse-flux
       labels:
-        app: helloworld
+        app: colorapi
     spec:
       containers:
-      - name: helloworld
-        image: argoproj/rollouts-demo: blue
+      - name: colorapi
+        image: particule/simplecolorapi:1.0
         imagePullPolicy: Always
         ports:
-        - name: http
-          containerPort: 8080
+        - name: web
+          containerPort: 5000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-#   namespace: demo-concourse-flux
-  name: helloworld-svc
+  name: colorapi
 spec:
   ports:
-  - port: 8080
+  - port: 80
   selector:
-    app: helloworld
+    app: colorapi
   type: LoadBalancer
 ---
-apiVersion: networking.k8s.io/v1
+
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: helloworld
+  namespace: demo-concourse-flux
+  name: colorapi
   annotations:
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: traefik
 spec:
   rules:
-  - http:
+  - host: demo-concourse-flux.particule.io
+    http:
       paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: helloworld-svc
-            port:
-              number: 80
-
-# apiVersion: networking.k8s.io/v1beta1
-# kind: Ingress
-# metadata:
-#   namespace: demo-concourse-flux
-#   name: helloworld
-#   annotations:
-#     kubernetes.io/ingress.class: traefik
-# spec:
-#   rules:
-#   - host: demo-concourse-flux.particule.io
-#     http:
-#       paths:
-#       - backend:
-#           serviceName: helloworld-svc
-#           servicePort: 8080
+      - backend:
+          serviceName: colorapi
+          servicePort: 80
