--- a/deploy/helloworld.yml
+++ b/deploy/helloworld.yml
@@ -2,45 +2,50 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: colorapi
+  namespace: demo-concourse-flux
+  name: helloworld
   labels:
-    app: colorapi
+    app: helloworld
+  annotations:
+    flux.weave.works/automated: "true"
+    flux.weave.works/tag.helloworld: semver:~1.0
 spec:
-  replicas: 5
+  replicas: 1
   revisionHistoryLimit: 2
   selector:
     matchLabels:
-      app: colorapi
+      app: helloworld
   template:
     metadata:
+      namespace: demo-concourse-flux
       labels:
-        app: colorapi
+        app: helloworld
     spec:
       containers:
-      - name: colorapi
-        image: particule/simplecolorapi:1.0
+      - name: helloworld
+        image: particule/demo-concourse-flux:1.0.7
         imagePullPolicy: Always
         ports:
         - name: web
-          containerPort: 5000
+          containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: colorapi
+  namespace: demo-concourse-flux
+  name: helloworld-svc
 spec:
   ports:
   - port: 80
   selector:
-    app: colorapi
-  type: LoadBalancer
+    app: helloworld
+  type: ClusterIP
 ---
-
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   namespace: demo-concourse-flux
-  name: colorapi
+  name: helloworld
   annotations:
     kubernetes.io/ingress.class: traefik
 spec:
@@ -49,5 +54,60 @@ spec:
     http:
       paths:
       - backend:
-          serviceName: colorapi
+          serviceName: helloworld-svc
           servicePort: 80
+
+
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: colorapi
+#   labels:
+#     app: colorapi
+# spec:
+#   replicas: 5
+#   revisionHistoryLimit: 2
+#   selector:
+#     matchLabels:
+#       app: colorapi
+#   template:
+#     metadata:
+#       labels:
+#         app: colorapi
+#     spec:
+#       containers:
+#       - name: colorapi
+#         image: particule/simplecolorapi:1.0
+#         imagePullPolicy: Always
+#         ports:
+#         - name: web
+#           containerPort: 5000
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: colorapi
+# spec:
+#   ports:
+#   - port: 80
+#   selector:
+#     app: colorapi
+#   type: LoadBalancer
+# ---
+
+# apiVersion: networking.k8s.io/v1beta1
+# kind: Ingress
+# metadata:
+#   namespace: demo-concourse-flux
+#   name: colorapi
+#   annotations:
+#     kubernetes.io/ingress.class: traefik
+# spec:
+#   rules:
+#   - host: demo-concourse-flux.particule.io
+#     http:
+#       paths:
+#       - backend:
+#           serviceName: colorapi
+#           servicePort: 80
