--- a/deploy/helloworld.yml
+++ b/deploy/helloworld.yml
@@ -1,129 +1,154 @@
----
-apiVersion: apps/v1
-kind: Deployment
+# ---
+apiVersion: argoproj.io/v1alpha1
+kind: Rollout
 metadata:
-  namespace: demo-concourse-flux
-  name: helloworld
-  labels:
-    app: helloworld
-  annotations:
-    flux.weave.works/automated: "true"
-    flux.weave.works/tag.helloworld: semver:~2.0
+  name: rollouts-demo
 spec:
-  replicas: 1
+  replicas: 5
+  strategy:
+    canary:
+      steps:
+      - setWeight: 20
+      - pause: {duration: 10}
+      - analysis:
+          templates:
+          - templateName: canary-check
+      - setWeight: 40
+      - pause: {duration: 10}
+      - setWeight: 60
+      - pause: {duration: 10}
+      - setWeight: 80
+      - pause: {duration: 10}
   revisionHistoryLimit: 2
   selector:
     matchLabels:
-      app: helloworld
+      app: rollouts-demo
   template:
     metadata:
-      namespace: demo-concourse-flux
       labels:
-        app: helloworld
+        app: rollouts-demo
     spec:
       containers:
-      - name: helloworld
-        image: particule/demo-concourse-flux:2.0.7
-        imagePullPolicy: Always
+      - name: rollouts-demo
+        image: argoproj/rollouts-demo:blue
         ports:
-        - name: web
-          containerPort: 80
----
+        - name: http
+          containerPort: 8080
+          protocol: TCP
+        resources:
+          requests:
+            memory: 32Mi
+            cpu: 5m
+# ---
+kind: AnalysisTemplate
+apiVersion: argoproj.io/v1alpha1
+metadata:
+  name: canary-check
+spec:
+  metrics:
+  - name: test
+    provider:
+      job:
+        spec:
+          backoffLimit: 1
+          template:
+            spec:
+              containers:
+              - name: busybox
+                image: busybox
+                #args: [test]  #--> for making analysis fail, uncomment
+              restartPolicy: Never
+# ---
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: demo-concourse-flux
-  name: helloworld-svc
+  name: rollouts-demo
 spec:
   ports:
   - port: 80
+    targetPort: http
+    protocol: TCP
+    name: http
   selector:
-    app: helloworld
-  type: ClusterIP
----
+    app: rollouts-demo
+
+# ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  namespace: demo-concourse-flux
-  name: helloworld
+  name: rollout-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
-  - host: demo-concourse-flux.particule.io
-    http:
+  - http:
       paths:
-      - backend:
-          serviceName: helloworld-svc
-          servicePort: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: rollouts-demo
+            port:
+              number: 80
 
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: rollouts-ingress
-#   annotations:
-#     kubernetes.io/ingress.class: nginx
-# spec:
-#   rules:
-#   - http:
-#       paths:
-#       - path: /
-#         pathType: Prefix
-#         backend:
-#           service:
-#             name: rollouts-demo
-#             port:
-#               number: 80
+# ---
+
 # ---
 # apiVersion: apps/v1
 # kind: Deployment
 # metadata:
-#   name: colorapi
+#   namespace: demo-concourse-flux
+#   name: helloworld
 #   labels:
-#     app: colorapi
+#     app: helloworld
+#   annotations:
+#     flux.weave.works/automated: "true"
+#     flux.weave.works/tag.helloworld: semver:~2.0
 # spec:
-#   replicas: 5
+#   replicas: 1
 #   revisionHistoryLimit: 2
 #   selector:
 #     matchLabels:
-#       app: colorapi
+#       app: helloworld
 #   template:
 #     metadata:
+#       namespace: demo-concourse-flux
 #       labels:
-#         app: colorapi
+#         app: helloworld
 #     spec:
 #       containers:
-#       - name: colorapi
-#         image: particule/simplecolorapi:2.0
+#       - name: helloworld
+#         image: particule/demo-concourse-flux:2.0.7
 #         imagePullPolicy: Always
 #         ports:
 #         - name: web
-#           containerPort: 5000
+#           containerPort: 80
 # ---
 # apiVersion: v1
 # kind: Service
 # metadata:
-#   name: colorapi
+#   namespace: demo-concourse-flux
+#   name: helloworld-svc
 # spec:
 #   ports:
 #   - port: 80
 #   selector:
-#     app: colorapi
-#   type: LoadBalancer
+#     app: helloworld
+#   type: ClusterIP
 # ---
-
-# apiVersion: networking.k8s.io/v1beta1
+# apiVersion: networking.k8s.io/v1
 # kind: Ingress
 # metadata:
 #   namespace: demo-concourse-flux
-#   name: colorapi
+#   name: helloworld
 #   annotations:
-#     kubernetes.io/ingress.class: traefik
+#     kubernetes.io/ingress.class: nginx
 # spec:
 #   rules:
 #   - host: demo-concourse-flux.particule.io
 #     http:
 #       paths:
 #       - backend:
-#           serviceName: colorapi
+#           serviceName: helloworld-svc
 #           servicePort: 80
+
